Import of DMAKI/Data-Visitor-Encode-0.02 from CPAN.
gitpan-cpan-distribution: Data-Visitor-Encode
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DMAKI/Data-Visitor-Encode-0.02.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 abstract: Encode/Decode Values In A Structure
-author: Daisuke Maki <daisuke@endeworks.jp<gt>
+author: Daisuke Maki <daisuke@endeworks.jp>
 build_requires: 
   Test::More: 0
 distribution_type: module
@@ -13,4 +13,4 @@ no_index:
 requires: 
   Data::Visitor: 0
   Encode: 0
-version: 0.01
+version: 0.02
