--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 --- 
 abstract: Encode/Decode Values In A Structure
-author: Daisuke Maki <daisuke@endeworks.jp>
+author: 
+  - Copyright (c) 2007 Daisuke Maki <daisuke@endeworks.jp>
 build_requires: 
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.65
+generated_by: Module::Install version 0.68
 license: perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -18,4 +19,4 @@ requires:
   Data::Visitor: 0
   Encode: 0
   Scalar::Util: 0
-version: 0.08
+version: 0.09000
