--- a/META.yml
+++ b/META.yml
@@ -16,9 +16,10 @@ no_index:
     - inc
     - t
 requires:
+  Any::Moose: 0.04
   Data::Visitor: 0.18
   Encode: 0
   Scalar::Util: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.10003
+version: 0.10004
