--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,13 @@ abstract: 'Encode/Decode Values In A Structure'
 author:
   - 'Copyright (c) 2007 Daisuke Maki <daisuke@endeworks.jp>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
+  Test::Exception: 0
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.79'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,10 +20,9 @@ no_index:
     - inc
     - t
 requires:
-  Any::Moose: 0.04
-  Data::Visitor: 0.18
+  Data::Visitor: 0.26
   Encode: 0
   Scalar::Util: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.10004
+version: 0.10005
