--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Encode/Decode Values In A Structure'
+abstract: 'Encode/Decode Values In A Structure (DEPRECATED)'
 author:
   - 'Copyright (c) 2007 Daisuke Maki <daisuke@endeworks.jp>'
 build_requires:
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
+generated_by: 'Module::Install version 1.01'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,4 +25,4 @@ requires:
   Scalar::Util: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.10006
+version: 0.10007
